logs/clodoo.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/clodoo'...
Compiling './lib/python3.5/site-packages/clodoo/clodoo.py'...
***   File "./lib/python3.5/site-packages/clodoo/clodoo.py", line 566
    print "- %s" % act
               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/clodoo/clodoolib.py'...
***   File "./lib/python3.5/site-packages/clodoo/clodoolib.py", line 157
    print txt
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/clodoo/compare_csv.py'...
***   File "./lib/python3.5/site-packages/clodoo/compare_csv.py", line 69
    print "Duplicate id %d" % id
                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/clodoo/inv2draft_n_restore.py'...
***   File "./lib/python3.5/site-packages/clodoo/inv2draft_n_restore.py", line 59
    print ">> Missing parameters"
                                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/clodoo/load_cv.py'...
***   File "./lib/python3.5/site-packages/clodoo/load_cv.py", line 118
    print "Evaluating %d of %s records " % (num_rec, max_rec)
                                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/clodoo/manage_vat_codes.py'...
***   File "./lib/python3.5/site-packages/clodoo/manage_vat_codes.py", line 749
    print "<<<Code %s not managed>>>" % code
                                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/clodoo/set_prj_acc_filter.py'...
***   File "./lib/python3.5/site-packages/clodoo/set_prj_acc_filter.py", line 15
    print msg
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/clodoo/upd_oemod.py'...
***   File "./lib/python3.5/site-packages/clodoo/upd_oemod.py", line 131
    print "%s passed" % module.name
                    ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/clodoo-0.3.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
